# game-of-life

./: .copilot-instructions.md  .gitignore  AGENTS.md  CONTRIBUTING.md  CUSTOMERS.md  Cargo.toml  LICENSE  PRODUCT.md  README.md  SECURITY.md
.github/: CODEOWNERS  (+4 more)
desktop/: .gitignore  Cargo.toml  tauri.conf.json
desktop/capabilities/: default.json
desktop/src/: events.rs  ipc_types.rs  lib.rs  main.rs  session.rs
desktop/src/commands/: mod.rs  run_commands.rs  session_commands.rs  setup_commands.rs
desktop/tests/: aggregate_series_tests.rs  ipc_types.rs  ipc_types_tests.rs  run_commands.rs  run_commands_tests.rs  session.rs  session_tests.rs
desktop/ui/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
desktop/ui/src/: App.test.tsx  App.tsx  theme.ts
desktop/ui/src/ai/: ChatPanel.test.tsx  ChatPanel.tsx  aiClient.ts  errors.ts
desktop/ui/src/components/: AppShell.test.tsx  AppShell.tsx  BoardCanvas.test.tsx  BoardCanvas.tsx  NavRail.tsx  NewRunDialog.test.tsx  NewRunDialog.tsx  PlaybackControls.tsx  SetupPanel.test.tsx  SetupPanel.tsx  Shell.tsx  StatsPanel.tsx  ToolsPanel.tsx
desktop/ui/src/ipc/: commands.ts  events.ts  index.ts  types.test.ts  types.ts
desktop/ui/src/panes/: AggregatePane.test.tsx  AggregatePane.tsx  EditPane.test.tsx  EditPane.tsx  PanePlaceholders.tsx  RunPane.test.tsx  RunPane.tsx  SettingsPane.test.tsx  SettingsPane.tsx
desktop/ui/src/state/: seriesDecimation.ts  store.test.ts  store.ts  terminalStatus.test.ts  terminalStatus.ts
desktop/ui/src/test/: setup.ts
desktop/ui/tests/: App.test.tsx
(+150 files in other folders)
